@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.24 2004/03/13 19:41:03 jklowden Exp $
+# $Id: Makefile.am,v 1.25 2004/10/13 13:48:13 freddy77 Exp $
 TESTS		=	t0001 t0002 t0003 t0004 t0005 t0006 t0007 t0008 \
 			t0009 t0010 t0011 t0012 t0013 t0014 t0015 t0016 \
 			t0017 t0018 t0019 t0020 t0021 t0022 t0023 rpc \
@@ -35,6 +35,7 @@ rpc_SOURCES	=	rpc.c common.c common.h
 dbmorecmds_SOURCES =	dbmorecmds.c common.c common.h
 bcp_SOURCES	=	bcp.c bcp.h common.c common.h 
 
+AM_LDFLAGS	=	-no-install
 LIBS		=	../libsybdb.la @NETWORK_LIBS@
 INCLUDES	=	-I$(top_srcdir)/include
 EXTRA_DIST	=	t0016.in t0017.in data.bin
