@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.37 2004/08/02 08:50:37 freddy77 Exp $
+# $Id: Makefile.am,v 1.38 2004/10/13 13:48:13 freddy77 Exp $
 TESTS		=	\
 			t0001 t0002 t0003 t0004 connect print date \
 			norowset funccall lang_error tables \
@@ -42,6 +42,7 @@ rebindpar_SOURCES	= rebindpar.c common.c common.h
 convert_error_SOURCES	= convert_error.c common.c common.h
 typeinfo_SOURCES	= typeinfo.c common.c common.h
 
+AM_LDFLAGS	=	-no-install
 LIBS		=	$(ODBCLIB) $(ODBCNODMLIB) @NETWORK_LIBS@
 INCLUDES	=	-I$(top_srcdir)/include $(ODBC_INC)
 DISTCLEANFILES	=	odbc.ini odbcinst.ini
